[gd_scene load_steps=2 format=3 uid="uid://cgameover12345"]

[ext_resource type="Script" path="res://scripts/ui/game_over_screen.gd" id="1_gameover"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gameover")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.14, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -220.0
offset_right = 180.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "GAME OVER"
horizontal_alignment = 1

[node name="NewBestLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "NEW BEST!"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="SprintLayout" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="SolvedLabel" type="Label" parent="VBoxContainer/StatsContainer/SprintLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Puzzles Solved: 0"
horizontal_alignment = 1

[node name="AccuracyLabel" type="Label" parent="VBoxContainer/StatsContainer/SprintLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Accuracy: 0%"
horizontal_alignment = 1

[node name="StrikesLabel" type="Label" parent="VBoxContainer/StatsContainer/SprintLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Strikes: 0 / 3"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer/StatsContainer/SprintLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Time Remaining: 0:00"
horizontal_alignment = 1

[node name="StreakLayout" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="StreakLabel" type="Label" parent="VBoxContainer/StatsContainer/StreakLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Final Streak: 0"
horizontal_alignment = 1

[node name="RatingLabel" type="Label" parent="VBoxContainer/StatsContainer/StreakLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Rating: 1200 â†’ 1200"
horizontal_alignment = 1

[node name="DailyLayout" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="EmojiGridLabel" type="Label" parent="VBoxContainer/StatsContainer/DailyLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "â¬›â¬›â¬›â¬›â¬›"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer/StatsContainer/DailyLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Score: 0.0 / 7.5"
horizontal_alignment = 1

[node name="StreakLabel" type="Label" parent="VBoxContainer/StatsContainer/DailyLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "ðŸ”¥ Streak: 1 day"
horizontal_alignment = 1

[node name="CopiedLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
text = "Copied to clipboard!"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayAgainButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 45)
theme_override_font_sizes/font_size = 16
text = "Play Again"

[node name="ReplayButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Replay Last Puzzle"

[node name="ReplayPuzzleButton" type="Button" parent="VBoxContainer/ButtonContainer"]
visible = false
layout_mode = 2
text = "Show Solution"

[node name="ShareButton" type="Button" parent="VBoxContainer/ButtonContainer"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(0, 45)
theme_override_font_sizes/font_size = 16
text = "Share Results"

[node name="MenuButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Main Menu"
